# quizis

./: CMakeLists.txt
libraries/: CMakeLists.txt
misc/: words2json.sh
src/: CMakeLists.txt  main.cxx
src/gtk/: main.cxx
test/: Problema-mnogikh-tel-v-kvantovoi-mekhanike-Fok-V.A.json  beregetie-xibiu.json  test.json
